# ml_dual_iso_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bins/cr2hdr/src/: main.rs
crates/dual-iso-core/: Cargo.toml
crates/dual-iso-core/src/: error.rs  lib.rs  types.rs
crates/dual-iso-core/src/dng_output/: mod.rs
crates/dual-iso-core/src/pipeline/: bad_pixels.rs  blend.rs  chroma_smooth.rs  deinterlace.rs  detect.rs  interpolate.rs  mod.rs  stripe_fix.rs  white_balance.rs
crates/dual-iso-core/src/raw_io/: mod.rs
crates/dual-iso-gui/: Cargo.toml
crates/dual-iso-gui/src/: app.rs  main.rs
crates/dual-iso-gui/src/panels/: exif.rs  files.rs  mod.rs  progress.rs  settings.rs
dual-iso-rs/bins/cr2hdr/: Cargo.toml
dual-iso-rs/crates/dual-iso-core/: Cargo.toml
dual-iso-rs/crates/dual-iso-core/src/: lib.rs  types.rs
dual-iso-rs/crates/dual-iso-core/src/dng_output/: mod.rs
dual-iso-rs/crates/dual-iso-core/src/pipeline/: blend.rs  dither.rs  mod.rs
dual-iso-rs/crates/dual-iso-gui/src/panels/: progress.rs
dual-iso-rs/xtask/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
