[workspace]
resolver = "3"
members = [
    "xtask",
    "crates/dual-iso-core",
    "crates/dual-iso-gui",
    "bins/cr2hdr",
]

[workspace.package]
edition    = "2024"
version    = "0.1.0"
authors    = ["Magic Lantern Team"]
license    = "GPL-2.0-or-later"

[workspace.dependencies]
dual-iso-core = { path = "crates/dual-iso-core" }

anyhow            = "1"
thiserror         = "2"
rayon             = "1"
rand              = "0.9"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap              = { version = "4", features = ["derive"] }
rawler            = "0.7"
tiff              = "0.11"
egui              = "0.34"
eframe            = { version = "0.34", features = ["default_fonts"] }
rfd               = "0.15"
