[package]
name    = "dual-iso-gui"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "dual-iso-gui"
path = "src/main.rs"

[dependencies]
dual-iso-core = { workspace = true }
egui          = { workspace = true }
eframe        = { workspace = true }
rfd           = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
rayon         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
