[package]
name    = "dual-iso-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
thiserror  = { workspace = true }
rayon      = { workspace = true }
rand       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
rawler     = { workspace = true }
tiff       = { workspace = true }
